@@ -140,9 +140,7 @@ SET foreign_key_checks = 0;
 		}
 	}
 
-	if ($is_sql) {
-		echo "-- " . gmdate("Y-m-d H:i:s e") . "\n";
-	}
+	$adminer->dumpFooter();
 	exit;
 }
 
