@@ -5,6 +5,7 @@ if (!$error && $_POST["export"]) {
 	dump_headers("sql");
 	$adminer->dumpTable("", "");
 	$adminer->dumpData("", "table", $_POST["query"]);
+	$adminer->dumpFooter();
 	exit;
 }
 
