@@ -9,6 +9,7 @@ MariaDB: Fix creating and altering generated columns (bug #897)
 SQLite: Fix creating table in compiled version (bug #901, regression from 5.0.0)
 Elastic: Do not pass null values on insert (PR #892)
 Elastic: Fix displaying sparse rows (PR #893)
+Plugins: Add method dumpFooter()
 
 Adminer 5.0.2 (released 2025-03-10):
 PostgreSQL: Fix setting NULL and original value on enum (bug #884)
